Started questions and wrote bullet points

--- a/cw1/questions.ipynb
+++ b/cw1/questions.ipynb
@@ -44,7 +44,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\**ANSWERS FOR PART 1 IN THIS CELL*\\*"
+    "\\**ANSWERS FOR PART 1 IN THIS CELL*\\*\n",
+    "1. Cross-validation, percentage split. Best option for deep learning applications --> Percentage split?\n",
+    "2. Add more training data, Change Regularisation, Change features, Change flexibility (reduce degree of polynomial) "
    ]
   },
   {
@@ -62,7 +64,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\**ANSWERS FOR PART 2 IN THIS CELL*\\*"
+    "\\**ANSWERS FOR PART 2 IN THIS CELL*\\*\n",
+    "1. With gradient-based learning, when calcuting the gradient and the sigmoid functions return values really close to 0, the weights don't update as the gradient is very close to 0. (vanishing gradient) Saturation of the sigmoid prevents gradent based learning from making good progress. The sigmoid saturates to 0 when z becomes very negative and saturates to 1 when z becomes very positive. The gradient can shrink too small to be suseful.\n",
+    "2. When they are used as output unit activation functions, an appropriate cost function is necessary to undo the saturation.\n",
+    "3. \n",
+    "* For neural networks the cost function does not have just one optimal pointand tend to get stuck in local minima, so it's a good idea to give them many different starting values. You can't do that if they all start at zero.\n",
+    "* If the neurons start with the same weights, then all the neurons will follow the same gradient, and will always end up doing the same thing as one another.\n",
+    "* Whenever you have a convex cost function you are allowed to initialize your weights to zeros. The cost function of logistic regression is convex and so no matter what the weights are initialised at, grade\n"
    ]
   },
   {
@@ -374,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
