Started task 3. Issue with weights

--- a/cw1/questions.ipynb
+++ b/cw1/questions.ipynb
@@ -98,16 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import *"
+    "from utils import *\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +125,10 @@
     "        #######################################################################\n",
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
-    "\n",
+    "#         self.weights = torch.distributions.Normal(torch.Tensor([0.0]), torch.Tensor([self.weight_init_sd])).sample()\n",
+    "        self.weights = torch.Tensor(784, 10).normal_(0.0, self.weight_init_sd)\n",
+    "#         for w in self.weights:\n",
+    "#             w.requires_grad=True\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n",
@@ -147,7 +151,15 @@
     "        #######################################################################\n",
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
-    "        \n",
+    "        print(inputs.shape)\n",
+    "        nsamples, nz, nx, ny = inputs.shape\n",
+    "        inputs_vec = torch.reshape(inputs,(nsamples,nx*ny))\n",
+    "        print(\"Inputs vec shape: \", inputs_vec.shape)\n",
+    "        print(\"weights shape: \", self.weights) \n",
+    "        z = torch.mm(inputs_vec, self.weights)\n",
+    "        logits = 1 / (1 + (np.exp(-z)))\n",
+    "        print(\"Logits shape: \", logits.shape)\n",
+    "        return logits\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n",
@@ -159,7 +171,12 @@
     "        #######################################################################\n",
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
-    "        \n",
+    "#         tmp = iter(self.weights)\n",
+    "#         print(tmp)\n",
+    "#         print(\"mplaaa\")\n",
+    "#         x = next(tmp)\n",
+    "#         print(x.shape)\n",
+    "        return [self.weights]\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n",
@@ -172,7 +189,7 @@
     "        #######################################################################\n",
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
-    "        \n",
+    "        return torch.sum(torch.abs(self.weights))\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n",
@@ -185,7 +202,7 @@
     "        #######################################################################\n",
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
-    "        \n",
+    "        return torch.sqrt(torch.sum(self.weights ** 2))\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n"
@@ -193,9 +210,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0: training...\n",
+      "torch.Size([64, 1, 28, 28])\n",
+      "Inputs vec shape:  torch.Size([64, 784])\n",
+      "weights shape:  tensor([[241.9410, -76.0127, -77.1037,  ...,  30.5189, 134.8688, -48.6098],\n",
+      "        [ 68.8013,  11.8880,  26.0332,  ..., 103.7931, -18.3588,  12.3196],\n",
+      "        [117.2766, 108.7107, -60.3039,  ..., 188.5929, -89.0366, -35.0567],\n",
+      "        ...,\n",
+      "        [ 31.4485,   2.8625, -15.3365,  ..., 160.2295, 106.5952, 175.7500],\n",
+      "        [ 85.7281, 120.3765,  65.2326,  ..., -93.4735,  29.3672, -82.7070],\n",
+      "        [115.0266, -70.7141, -70.9243,  ..., 164.0298,   3.6927,  -9.2869]])\n",
+      "Logits shape:  torch.Size([64, 10])\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "element 0 of tensors does not require grad and does not have a grad_fn",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-124-6704d1b5d1c1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0ml1_penalty_coef\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0ml2_penalty_coef\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0msuppress_output\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m )\n",
+      "\u001b[0;32m~/Desktop/dl_cw/cw1/utils.py\u001b[0m in \u001b[0;36mrun_experiment\u001b[0;34m(model, optimizer, train_loader, val_loader, test_loader, n_epochs, l1_penalty_coef, l2_penalty_coef, suppress_output)\u001b[0m\n\u001b[1;32m    125\u001b[0m             \u001b[0ml1_penalty_coef\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0ml1_penalty_coef\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    126\u001b[0m             \u001b[0ml2_penalty_coef\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0ml2_penalty_coef\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 127\u001b[0;31m             \u001b[0msuppress_output\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msuppress_output\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    128\u001b[0m         )\n\u001b[1;32m    129\u001b[0m         val_loss, val_accuracy = evaluate(\n",
+      "\u001b[0;32m~/Desktop/dl_cw/cw1/utils.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, dataloader, optimizer, l1_penalty_coef, l2_penalty_coef, suppress_output)\u001b[0m\n\u001b[1;32m     57\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0ml2_penalty_coef\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m             \u001b[0mloss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0ml2_penalty_coef\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ml2_weight_penalty\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/mli/lib/python3.6/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    100\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m         \"\"\"\n\u001b[0;32m--> 102\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    103\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    104\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/mli/lib/python3.6/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     88\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     89\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: element 0 of tensors does not require grad and does not have a grad_fn"
+     ]
+    }
+   ],
    "source": [
     "# *CODE FOR PART 3.2 IN THIS CELL - EXAMPLE WITH DEFAULT PARAMETERS PROVIDED *\n",
     "model = MultinomialLogisticRegressionClassifier(weight_init_sd=100.0)\n",
@@ -382,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
