--- a/cw1/questions.ipynb
+++ b/cw1/questions.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,13 +125,9 @@
     "        #######################################################################\n",
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
-    "#         self.weights = torch.distributions.Normal(torch.Tensor([0.0]), torch.Tensor([self.weight_init_sd])).sample()\n",
-    "#         self.weights = torch.Tensor((784, 10), requires_grad=True).normal_(0.0, self.weight_init_sd)\n",
-    "#         self.weights = torch.zeros(784,10)\n",
-    "#         self.weights = torch.normal(torch.tensor(0.0), torch.tensor(self.weight_init_sd), (784, 10))\n",
-    "#         self.weights = torch.randn((784,10), requires_grad=True) * self.weight_init_sd\n",
-    "        self.weights = torch.randn(784,10) * self.weight_init_sd\n",
-    "        print(self.weights.shape)\n",
+    "        self.weights = torch.randn((784,10)) * self.weight_init_sd\n",
+    "        self.weights.requires_grad = True\n",
+    "        self.bias = torch.zeros(10, requires_grad=True)\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n",
@@ -154,15 +150,12 @@
     "        #######################################################################\n",
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
-    "        print(inputs.shape)\n",
     "        nsamples, nz, nx, ny = inputs.shape\n",
     "        inputs_vec = torch.reshape(inputs,(nsamples,nx*ny))\n",
-    "        print(\"Inputs vec shape: \", inputs_vec.shape)\n",
-    "        print(\"weights shape: \", self.weights) \n",
-    "        z = torch.mm(inputs_vec, self.weights)\n",
-    "        logits = 1 / (1 + (np.exp(-z)))\n",
-    "        print(\"Logits shape: \", logits.shape)\n",
-    "        return logits\n",
+    "     \n",
+    "        z = torch.mm(inputs_vec, self.weights) + self.bias\n",
+    "        \n",
+    "        return F.softmax(z, dim=1)\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n",
@@ -174,13 +167,7 @@
     "        #######################################################################\n",
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
-    "#         tmp = iter(self.weights)\n",
-    "#         print(tmp)\n",
-    "#         print(\"mplaaa\")\n",
-    "#         x = next(tmp)\n",
-    "#         print(x.shape)\n",
-    "        return [self.weights]\n",
-    "#         return dict(zip(np.arange(0, len(self.weights)), self.weights))\n",
+    "        return [{\"params\": self.weights}, {\"params\": self.bias}]\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n",
@@ -206,7 +193,7 @@
     "        #######################################################################\n",
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
-    "        return torch.sqrt(torch.sum(self.weights ** 2))\n",
+    "        return torch.sum(self.weights ** 2)\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n"
@@ -214,34 +201,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'bool' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-42-6704d1b5d1c1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# *CODE FOR PART 3.2 IN THIS CELL - EXAMPLE WITH DEFAULT PARAMETERS PROVIDED *\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMultinomialLogisticRegressionClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweight_init_sd\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m res = run_experiment(\n\u001b[1;32m      4\u001b[0m     \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0moptimizer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0moptim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSGD\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-41-40337e14f2a1>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, weight_init_sd)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;31m#         self.weights = torch.normal(torch.tensor(0.0), torch.tensor(self.weight_init_sd), (784, 10))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;31m#         self.weights = torch.randn((784,10), requires_grad=True) * self.weight_init_sd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweights\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m784\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrequires_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight_init_sd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[0;31m#######################################################################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'bool' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0: training...\n",
+      "Train set:\tAverage loss: -0.7423, Accuracy: 0.8431\n",
+      "Validation set:\tAverage loss: -0.8493, Accuracy: 0.8945\n",
+      "\n",
+      "Epoch 1: training...\n",
+      "Train set:\tAverage loss: -0.8672, Accuracy: 0.9035\n",
+      "Validation set:\tAverage loss: -0.8768, Accuracy: 0.9062\n",
+      "\n",
+      "Epoch 2: training...\n",
+      "Train set:\tAverage loss: -0.8862, Accuracy: 0.9124\n",
+      "Validation set:\tAverage loss: -0.8904, Accuracy: 0.9105\n",
+      "\n",
+      "Epoch 3: training...\n",
+      "Train set:\tAverage loss: -0.8959, Accuracy: 0.9169\n",
+      "Validation set:\tAverage loss: -0.8962, Accuracy: 0.9132\n",
+      "\n",
+      "Epoch 4: training...\n",
+      "Train set:\tAverage loss: -0.9019, Accuracy: 0.9208\n",
+      "Validation set:\tAverage loss: -0.9016, Accuracy: 0.9173\n",
+      "\n",
+      "Epoch 5: training...\n",
+      "Train set:\tAverage loss: -0.9063, Accuracy: 0.9231\n",
+      "Validation set:\tAverage loss: -0.9045, Accuracy: 0.9190\n",
+      "\n",
+      "Epoch 6: training...\n",
+      "Train set:\tAverage loss: -0.9095, Accuracy: 0.9250\n"
      ]
     }
    ],
    "source": [
     "# *CODE FOR PART 3.2 IN THIS CELL - EXAMPLE WITH DEFAULT PARAMETERS PROVIDED *\n",
-    "model = MultinomialLogisticRegressionClassifier(weight_init_sd=100.0)\n",
+    "model = MultinomialLogisticRegressionClassifier(weight_init_sd=0.001)\n",
     "res = run_experiment(\n",
     "    model,\n",
-    "    optimizer=optim.SGD(model.parameters(), 1.0),\n",
+    "    optimizer=optim.Adam(model.parameters(), 0.001),\n",
     "    train_loader=train_loader_0,\n",
     "    val_loader=val_loader_0,\n",
     "    test_loader=test_loader_0,\n",
-    "    n_epochs=3,\n",
-    "    l1_penalty_coef=10.0,\n",
-    "    l2_penalty_coef=10.0,\n",
+    "    n_epochs=10,\n",
+    "    l1_penalty_coef=0.000001,\n",
+    "    l2_penalty_coef=0.000001,\n",
     "    suppress_output=False\n",
     ")"
    ]
