--- a/cw1/questions.ipynb
+++ b/cw1/questions.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,15 +126,16 @@
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
     "        self.weights = torch.randn((784,10)) * self.weight_init_sd\n",
-    "        self.weights.requires_grad = True\n",
-    "        self.bias = torch.zeros(10, requires_grad=True)\n",
+    "        self.weights.requires_grad_()\n",
+    "        self.bias = torch.zeros(10)\n",
+    "        self.bias.requires_grad_()\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n",
     "\n",
     "    def __call__(self, *args, **kwargs):\n",
     "        return self.forward(*args, **kwargs)\n",
-    "\n",
+    "    \n",
     "    def forward(self, inputs):\n",
     "        \"\"\"\n",
     "        Performs the forward pass through the model.\n",
@@ -150,12 +151,12 @@
     "        #######################################################################\n",
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
-    "        nsamples, nz, nx, ny = inputs.shape\n",
-    "        inputs_vec = torch.reshape(inputs,(nsamples,nx*ny))\n",
+    "        inputs_vec = inputs.view(-1, 784)\n",
     "     \n",
-    "        z = torch.mm(inputs_vec, self.weights) + self.bias\n",
+    "        y = torch.mm(inputs_vec, self.weights) + self.bias\n",
     "        \n",
-    "        return F.softmax(z, dim=1)\n",
+    "#         return F.log_softmax(z, dim=1)\n",
+    "        return y - torch.log(torch.sum(torch.exp(y), 1)).unsqueeze(1)\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n",
@@ -167,7 +168,8 @@
     "        #######################################################################\n",
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
-    "        return [{\"params\": self.weights}, {\"params\": self.bias}]\n",
+    "        return [self.weights, self.bias]\n",
+    "#         return [{\"params\": self.weights}, {\"params\": self.bias}]\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n",
@@ -187,8 +189,8 @@
     "\n",
     "    def l2_weight_penalty(self):\n",
     "        \"\"\"\n",
-    "        Computes and returns the L2 norm of the model's weight vector (i.e. \n",
-    "        square root of sum of squared values of all model parameters).\n",
+    "        Computes and returns the L2 weight penalty (i.e. \n",
+    "        sum of squared values of all model parameters).\n",
     "        \"\"\"\n",
     "        #######################################################################\n",
     "        #                       ** START OF YOUR CODE **\n",
@@ -201,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -209,37 +211,54 @@
      "output_type": "stream",
      "text": [
       "Epoch 0: training...\n",
-      "Train set:\tAverage loss: -0.7423, Accuracy: 0.8431\n",
-      "Validation set:\tAverage loss: -0.8493, Accuracy: 0.8945\n",
+      "Train set:\tAverage loss: 0.5640, Accuracy: 0.8684\n",
+      "Validation set:\tAverage loss: 0.3583, Accuracy: 0.9018\n",
       "\n",
       "Epoch 1: training...\n",
-      "Train set:\tAverage loss: -0.8672, Accuracy: 0.9035\n",
-      "Validation set:\tAverage loss: -0.8768, Accuracy: 0.9062\n",
+      "Train set:\tAverage loss: 0.3301, Accuracy: 0.9093\n",
+      "Validation set:\tAverage loss: 0.3085, Accuracy: 0.9123\n",
       "\n",
       "Epoch 2: training...\n",
-      "Train set:\tAverage loss: -0.8862, Accuracy: 0.9124\n",
-      "Validation set:\tAverage loss: -0.8904, Accuracy: 0.9105\n",
+      "Train set:\tAverage loss: 0.3001, Accuracy: 0.9164\n",
+      "Validation set:\tAverage loss: 0.2908, Accuracy: 0.9163\n",
       "\n",
       "Epoch 3: training...\n",
-      "Train set:\tAverage loss: -0.8959, Accuracy: 0.9169\n",
-      "Validation set:\tAverage loss: -0.8962, Accuracy: 0.9132\n",
+      "Train set:\tAverage loss: 0.2860, Accuracy: 0.9203\n",
+      "Validation set:\tAverage loss: 0.2819, Accuracy: 0.9192\n",
       "\n",
       "Epoch 4: training...\n",
-      "Train set:\tAverage loss: -0.9019, Accuracy: 0.9208\n",
-      "Validation set:\tAverage loss: -0.9016, Accuracy: 0.9173\n",
+      "Train set:\tAverage loss: 0.2771, Accuracy: 0.9232\n",
+      "Validation set:\tAverage loss: 0.2787, Accuracy: 0.9198\n",
       "\n",
       "Epoch 5: training...\n",
-      "Train set:\tAverage loss: -0.9063, Accuracy: 0.9231\n",
-      "Validation set:\tAverage loss: -0.9045, Accuracy: 0.9190\n",
+      "Train set:\tAverage loss: 0.2710, Accuracy: 0.9244\n",
+      "Validation set:\tAverage loss: 0.2756, Accuracy: 0.9212\n",
       "\n",
       "Epoch 6: training...\n",
-      "Train set:\tAverage loss: -0.9095, Accuracy: 0.9250\n"
+      "Train set:\tAverage loss: 0.2662, Accuracy: 0.9259\n",
+      "Validation set:\tAverage loss: 0.2725, Accuracy: 0.9215\n",
+      "\n",
+      "Epoch 7: training...\n",
+      "Train set:\tAverage loss: 0.2626, Accuracy: 0.9270\n",
+      "Validation set:\tAverage loss: 0.2684, Accuracy: 0.9248\n",
+      "\n",
+      "Epoch 8: training...\n",
+      "Train set:\tAverage loss: 0.2593, Accuracy: 0.9278\n",
+      "Validation set:\tAverage loss: 0.2669, Accuracy: 0.9270\n",
+      "\n",
+      "Epoch 9: training...\n",
+      "Train set:\tAverage loss: 0.2571, Accuracy: 0.9282\n",
+      "Validation set:\tAverage loss: 0.2661, Accuracy: 0.9258\n",
+      "\n",
+      "Test set:\tAverage loss: 0.2646, Accuracy: 0.9252\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "# *CODE FOR PART 3.2 IN THIS CELL - EXAMPLE WITH DEFAULT PARAMETERS PROVIDED *\n",
-    "model = MultinomialLogisticRegressionClassifier(weight_init_sd=0.001)\n",
+    "torch.manual_seed(0)\n",
+    "model = MultinomialLogisticRegressionClassifier(weight_init_sd=0.0001)\n",
     "res = run_experiment(\n",
     "    model,\n",
     "    optimizer=optim.Adam(model.parameters(), 0.001),\n",
@@ -281,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,6 +329,26 @@
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
     "        \n",
+    "        # 128, 64, and 32 hidden units\n",
+    "        self.w0 = torch.randn((784,128)) * self.weight_init_sd\n",
+    "        self.w0.requires_grad_()\n",
+    "        self.b0 = torch.zeros(128)\n",
+    "        self.b0.requires_grad_()\n",
+    "        \n",
+    "        self.w1 = torch.randn((128,64)) * self.weight_init_sd\n",
+    "        self.w1.requires_grad_()\n",
+    "        self.b1 = torch.zeros(64)\n",
+    "        self.b1.requires_grad_()\n",
+    "        \n",
+    "        self.w2 = torch.randn((64,32)) * self.weight_init_sd\n",
+    "        self.w2.requires_grad_()\n",
+    "        self.b2 = torch.zeros(32)\n",
+    "        self.b2.requires_grad_()\n",
+    "        \n",
+    "        self.w3 = torch.randn((32,10)) * self.weight_init_sd\n",
+    "        self.w3.requires_grad_()\n",
+    "        self.b3 = torch.zeros(10)\n",
+    "        self.b3.requires_grad_()\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n",
@@ -332,7 +371,20 @@
     "        #######################################################################\n",
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
+    "        inputs_vec = inputs.view(-1, 784)\n",
+    "\n",
+    "        y0 = torch.mm(inputs_vec, self.w0) + self.b0\n",
     "        \n",
+    "        a1 = self.activation(y0)\n",
+    "        y1 = torch.mm(a1, self.w1) + self.b1\n",
+    "        \n",
+    "        a2 = self.activation(y1)\n",
+    "        y2 = torch.mm(a2, self.w2) + self.b2\n",
+    "        \n",
+    "        a3 = self.activation(y2)\n",
+    "        y3 = torch.mm(a3, self.w3) + self.b3\n",
+    "        \n",
+    "        return y3 - torch.log(torch.sum(torch.exp(y3), 1)).unsqueeze(1)\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n",
@@ -344,12 +396,13 @@
     "        #######################################################################\n",
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
-    "        \n",
+    "#         return [{\"params\": self.w0}, {\"params\": self.b0}, {\"params\": self.w1}, {\"params\": self.b1}, \\\n",
+    "#                 {\"params\": self.w2}, {\"params\": self.b2}, {\"params\": self.w3}, {\"params\": self.b3}]\n",
+    "        return [self.w0, self.b0, self.w1, self.b1, self.w2, self.b2, self.w3, self.b3]\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n",
     "        \n",
-    "    \n",
     "    def l1_weight_penalty(self):\n",
     "        \"\"\"\n",
     "        Computes and returns the L1 norm of the model's weight vector (i.e. sum\n",
@@ -358,20 +411,22 @@
     "        #######################################################################\n",
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
-    "        \n",
+    "        return torch.sum(torch.abs(self.w0)) + torch.sum(torch.abs(self.w1)) + \\\n",
+    "                 torch.sum(torch.abs(self.w2)) + torch.sum(torch.abs(self.w3))\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n",
     "\n",
     "    def l2_weight_penalty(self):\n",
     "        \"\"\"\n",
-    "        Computes and returns the L2 norm of the model's weight vector (i.e. \n",
-    "        square root of sum of squared values of all model parameters).\n",
+    "        Computes and returns the L2 weight penalty (i.e. sum of squared values \n",
+    "        of all model parameters).\n",
     "        \"\"\"\n",
     "        #######################################################################\n",
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
-    "        \n",
+    "        return torch.sum(self.w0 ** 2) + torch.sum(self.w1 ** 2) + \\\n",
+    "                torch.sum(self.w2 ** 2) + torch.sum(self.w3 ** 2)\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n"
@@ -379,22 +434,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0: training...\n",
+      "Train set:\tAverage loss: 1.2335, Accuracy: 0.5263\n",
+      "Validation set:\tAverage loss: 0.3156, Accuracy: 0.9218\n",
+      "\n",
+      "Epoch 1: training...\n",
+      "Train set:\tAverage loss: 0.2292, Accuracy: 0.9372\n",
+      "Validation set:\tAverage loss: 0.1690, Accuracy: 0.9527\n",
+      "\n",
+      "Epoch 2: training...\n",
+      "Train set:\tAverage loss: 0.1373, Accuracy: 0.9607\n",
+      "Validation set:\tAverage loss: 0.1310, Accuracy: 0.9625\n",
+      "\n",
+      "Epoch 3: training...\n",
+      "Train set:\tAverage loss: 0.1006, Accuracy: 0.9705\n",
+      "Validation set:\tAverage loss: 0.1226, Accuracy: 0.9647\n",
+      "\n",
+      "Epoch 4: training...\n",
+      "Train set:\tAverage loss: 0.0829, Accuracy: 0.9753\n",
+      "Validation set:\tAverage loss: 0.1135, Accuracy: 0.9672\n",
+      "\n",
+      "Epoch 5: training...\n",
+      "Train set:\tAverage loss: 0.0636, Accuracy: 0.9813\n",
+      "Validation set:\tAverage loss: 0.1026, Accuracy: 0.9705\n",
+      "\n",
+      "Epoch 6: training...\n",
+      "Train set:\tAverage loss: 0.0548, Accuracy: 0.9831\n",
+      "Validation set:\tAverage loss: 0.1150, Accuracy: 0.9665\n",
+      "\n",
+      "Epoch 7: training...\n",
+      "Train set:\tAverage loss: 0.0483, Accuracy: 0.9849\n",
+      "Validation set:\tAverage loss: 0.1121, Accuracy: 0.9687\n",
+      "\n",
+      "Epoch 8: training...\n",
+      "Train set:\tAverage loss: 0.0424, Accuracy: 0.9868\n",
+      "Validation set:\tAverage loss: 0.1049, Accuracy: 0.9725\n",
+      "\n",
+      "Test set:\tAverage loss: 0.1006, Accuracy: 0.9729\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# *CODE FOR PART 4.2 IN THIS CELL - EXAMPLE WITH DEFAULT PARAMETERS PROVIDED *\n",
-    "\n",
-    "model = MultilayerClassifier(activation_fun='sigmoid', weight_init_sd=1.0)\n",
+    "torch.manual_seed(0)\n",
+    "model = MultilayerClassifier(activation_fun='tanh', weight_init_sd=0.0001)\n",
     "res = run_experiment(\n",
     "    model,\n",
-    "    optimizer=optim.SGD(model.parameters(), 0.1),\n",
+    "    optimizer=optim.Adam(model.parameters(), 0.002),\n",
     "    train_loader=train_loader_0,\n",
     "    val_loader=val_loader_0,\n",
     "    test_loader=test_loader_0,\n",
-    "    n_epochs=3,\n",
-    "    l1_penalty_coef=1.0,\n",
-    "    l2_penalty_coef=1.0,\n",
+    "    n_epochs=9,\n",
+    "    l1_penalty_coef=0.0000001,\n",
+    "    l2_penalty_coef=0.0000001,\n",
     "    suppress_output=False\n",
     ")"
    ]
@@ -423,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
