Changed last NN to relu activation function. Answered all questions

--- a/cw1/questions.ipynb
+++ b/cw1/questions.ipynb
@@ -45,8 +45,12 @@
    "metadata": {},
    "source": [
     "\\**ANSWERS FOR PART 1 IN THIS CELL*\\*\n",
-    "1. Cross-validation, percentage split. Best option for deep learning applications --> Percentage split?\n",
-    "2. Add more training data, Change Regularisation, Change features, Change flexibility (reduce degree of polynomial) "
+    "1. Two practical methods used to estimate a supervised learning model's performance on unseen data are Cross-validation and  Percentage split. The most commonly used in most deep learning applications is Percentage split. Having a large data set, it's common practice to do an 80:20 or 90:10 split for training:validation. Due to the computational expense of training a neural network, you may choose to use the smaller split. This is also the reason it is prefered over Cross-validation, where you would have to take k-fold splits and repeat the training multiple times, thus increasing the training time by a lot.\n",
+    "2. Four ways of improving the generalisation of a neural netowrk's performance are:\n",
+    "    1. Use more training data to increase the variability of information in the training\n",
+    "    2. Change Regularisation method (eg L2, L1) or tune the regularisation parameter \n",
+    "    3. Change the features of the data used, which might produce more variance\n",
+    "    4. Use bagging, i.e. train the model on batches of the training data"
    ]
   },
   {
@@ -65,12 +69,9 @@
    "metadata": {},
    "source": [
     "\\**ANSWERS FOR PART 2 IN THIS CELL*\\*\n",
-    "1. With gradient-based learning, when calcuting the gradient and the sigmoid functions return values really close to 0, the weights don't update as the gradient is very close to 0. (vanishing gradient) Saturation of the sigmoid prevents gradent based learning from making good progress. The sigmoid saturates to 0 when z becomes very negative and saturates to 1 when z becomes very positive. The gradient can shrink too small to be suseful.\n",
+    "1. With gradient-based learning, when calcuting the gradient and the sigmoid functions return values really close to 0, the weights don't update (vanishing gradient). Also, saturation of the sigmoid prevents gradient-based learning from making good progress. Looking at the graph of the sigmoid, we can see that it saturates to 0 when values become very negative and saturates to 1 when values becomes very positive. Therefore, the gradient can shrink too small to be successful.\n",
     "2. When they are used as output unit activation functions, an appropriate cost function is necessary to undo the saturation.\n",
-    "3. \n",
-    "* For neural networks the cost function does not have just one optimal pointand tend to get stuck in local minima, so it's a good idea to give them many different starting values. You can't do that if they all start at zero.\n",
-    "* If the neurons start with the same weights, then all the neurons will follow the same gradient, and will always end up doing the same thing as one another.\n",
-    "* Whenever you have a convex cost function you are allowed to initialize your weights to zeros. The cost function of logistic regression is convex and so no matter what the weights are initialised at, grade\n"
+    "3. In the case of multi-layer fully-connected neutal netoworks, the cost function does not have just one optimal point and they tend to get stuck in local minima, so it's a good idea to give them many different starting values. So, the initialization with zeros might get the model to get stuck in a local minimum which is not the optimum point. Also, if the neurons start with the same weights, then all the neurons will follow the same gradient, and will always end up doing the same thing as one another. Whenever you have a convex cost function you are allowed to initialize your weights to zeros. The cost function of logistic regression is convex and so no matter what the weights are initialised at, the minimum is guaranteed to be reached.\n"
    ]
   },
   {
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +156,6 @@
     "     \n",
     "        y = torch.mm(inputs_vec, self.weights) + self.bias\n",
     "        \n",
-    "#         return F.log_softmax(z, dim=1)\n",
     "        return y - torch.log(torch.sum(torch.exp(y), 1)).unsqueeze(1)\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
@@ -169,7 +169,6 @@
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
     "        return [self.weights, self.bias]\n",
-    "#         return [{\"params\": self.weights}, {\"params\": self.bias}]\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n",
@@ -203,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,12 +328,13 @@
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
     "        \n",
-    "        # 128, 64, and 32 hidden units\n",
+    "        # Input weights\n",
     "        self.w0 = torch.randn((784,128)) * self.weight_init_sd\n",
     "        self.w0.requires_grad_()\n",
     "        self.b0 = torch.zeros(128)\n",
     "        self.b0.requires_grad_()\n",
     "        \n",
+    "        # 128, 64, and 32 hidden units\n",
     "        self.w1 = torch.randn((128,64)) * self.weight_init_sd\n",
     "        self.w1.requires_grad_()\n",
     "        self.b1 = torch.zeros(64)\n",
@@ -396,8 +396,6 @@
     "        #######################################################################\n",
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
-    "#         return [{\"params\": self.w0}, {\"params\": self.b0}, {\"params\": self.w1}, {\"params\": self.b1}, \\\n",
-    "#                 {\"params\": self.w2}, {\"params\": self.b2}, {\"params\": self.w3}, {\"params\": self.b3}]\n",
     "        return [self.w0, self.b0, self.w1, self.b1, self.w2, self.b2, self.w3, self.b3]\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
@@ -434,58 +432,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: training...\n",
-      "Train set:\tAverage loss: 1.2335, Accuracy: 0.5263\n",
-      "Validation set:\tAverage loss: 0.3156, Accuracy: 0.9218\n",
-      "\n",
-      "Epoch 1: training...\n",
-      "Train set:\tAverage loss: 0.2292, Accuracy: 0.9372\n",
-      "Validation set:\tAverage loss: 0.1690, Accuracy: 0.9527\n",
-      "\n",
-      "Epoch 2: training...\n",
-      "Train set:\tAverage loss: 0.1373, Accuracy: 0.9607\n",
-      "Validation set:\tAverage loss: 0.1310, Accuracy: 0.9625\n",
-      "\n",
-      "Epoch 3: training...\n",
-      "Train set:\tAverage loss: 0.1006, Accuracy: 0.9705\n",
-      "Validation set:\tAverage loss: 0.1226, Accuracy: 0.9647\n",
-      "\n",
-      "Epoch 4: training...\n",
-      "Train set:\tAverage loss: 0.0829, Accuracy: 0.9753\n",
-      "Validation set:\tAverage loss: 0.1135, Accuracy: 0.9672\n",
-      "\n",
-      "Epoch 5: training...\n",
-      "Train set:\tAverage loss: 0.0636, Accuracy: 0.9813\n",
-      "Validation set:\tAverage loss: 0.1026, Accuracy: 0.9705\n",
-      "\n",
-      "Epoch 6: training...\n",
-      "Train set:\tAverage loss: 0.0548, Accuracy: 0.9831\n",
-      "Validation set:\tAverage loss: 0.1150, Accuracy: 0.9665\n",
-      "\n",
-      "Epoch 7: training...\n",
-      "Train set:\tAverage loss: 0.0483, Accuracy: 0.9849\n",
-      "Validation set:\tAverage loss: 0.1121, Accuracy: 0.9687\n",
-      "\n",
-      "Epoch 8: training...\n",
-      "Train set:\tAverage loss: 0.0424, Accuracy: 0.9868\n",
-      "Validation set:\tAverage loss: 0.1049, Accuracy: 0.9725\n",
-      "\n",
-      "Test set:\tAverage loss: 0.1006, Accuracy: 0.9729\n",
-      "\n"
+      "Epoch 0: training...\n"
      ]
     }
    ],
    "source": [
     "# *CODE FOR PART 4.2 IN THIS CELL - EXAMPLE WITH DEFAULT PARAMETERS PROVIDED *\n",
     "torch.manual_seed(0)\n",
-    "model = MultilayerClassifier(activation_fun='tanh', weight_init_sd=0.0001)\n",
+    "model = MultilayerClassifier(activation_fun='relu', weight_init_sd=0.0001)\n",
     "res = run_experiment(\n",
     "    model,\n",
     "    optimizer=optim.Adam(model.parameters(), 0.002),\n",
@@ -503,7 +464,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\**ANSWERS FOR PART 4.3 IN THIS CELL*\\*"
+    "\\**ANSWERS FOR PART 4.3 IN THIS CELL*\\*\n",
+    "\n",
+    "We initialized our weights by randomly drawing from a Normal distribution. This might lead to vanishing gradients, since we might end up with large weights and small gradient. Therefore, during training the weights won't change much and the accuracy won't improve. Another issue is exploding gradients, where we end up with weights that cause instability in the cost function and the big values of the gradients during back propagation will prossibly result to NaN values in the loss.\n",
+    "\n",
+    "An alternative strategy is to use an initialization of the weights that depends on the activation function used in the layers. This heuristic method suggests that while we still draw from a normal distribution, we scale it with a certain factor specific to each activation function. For example, we could use the factor sqrt(2/size) when using the ReLU activation function."
    ]
   }
  ],
