Ready for submission

--- a/cw1/questions.ipynb
+++ b/cw1/questions.ipynb
@@ -49,8 +49,8 @@
     "2. Four ways of improving the generalisation of a neural netowrk's performance are:\n",
     "    1. Use more training data to increase the variability of information in the training\n",
     "    2. Change Regularisation method (eg L2, L1) or tune the regularisation parameter \n",
-    "    3. Change the features of the data used, which might produce more variance\n",
-    "    4. Use bagging, i.e. train the model on batches of the training data"
+    "    3. Use Early stopping as regularisation, i.e. force termination of the training before the model reaches convergence of the weights updates. This termination should take place at the point where the loss (error) on the validation set starts increasing, whereas the loss on the training set keeps decreasing. \n",
+    "    4. Use Dropout. Basically, using this, we are turning off neurons with a bernoulli probability each epoch. This creates networks with various connectivity, like an ensemble method. This method of not going through the same neurons every time reduces over-fitting. "
    ]
   },
   {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: training...\n"
+      "Epoch 0: training...\n",
+      "Train set:\tAverage loss: 1.1019, Accuracy: 0.5900\n",
+      "Validation set:\tAverage loss: 0.4174, Accuracy: 0.8783\n",
+      "\n",
+      "Epoch 1: training...\n",
+      "Train set:\tAverage loss: 0.3027, Accuracy: 0.9134\n",
+      "Validation set:\tAverage loss: 0.2098, Accuracy: 0.9380\n",
+      "\n",
+      "Epoch 2: training...\n"
      ]
     }
    ],
@@ -470,6 +478,13 @@
     "\n",
     "An alternative strategy is to use an initialization of the weights that depends on the activation function used in the layers. This heuristic method suggests that while we still draw from a normal distribution, we scale it with a certain factor specific to each activation function. For example, we could use the factor sqrt(2/size) when using the ReLU activation function."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
