--- a/cw2/460cw2.ipynb
+++ b/cw2/460cw2.ipynb
@@ -47,11 +47,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: torch in /vol/lab/course/416/venv/lib/python3.6/site-packages (1.0.0)\n",
+      "Requirement already satisfied: torchvision in /vol/lab/course/416/venv/lib/python3.6/site-packages (0.2.1)\n",
+      "Requirement already satisfied: numpy in /vol/lab/course/416/venv/lib/python3.6/site-packages (from torchvision) (1.16.0)\n",
+      "Requirement already satisfied: six in /vol/lab/course/416/venv/lib/python3.6/site-packages (from torchvision) (1.12.0)\n",
+      "Requirement already satisfied: pillow>=4.1.1 in /vol/lab/course/416/venv/lib/python3.6/site-packages (from torchvision) (5.4.1)\n",
+      "\u001b[33mYou are using pip version 18.1, however version 19.0.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install torch torchvision"
    ]
@@ -674,7 +686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
